<resources>
    <string name="app_name">Pizzeria</string>
    <string name="titulo">Pizzeria</string>
    <string name="usuario"></string>
    <string name="LogIn">LogIn</string>
    <string name="Register">Register</string>
    <string name="textViewUsuario">Usuario</string>
    <string name="textViewContra">Contraseña</string>
    <string name="pedir">Hacer pedido</string>
    <string name="web">Nuestro Sitio WEB</string>
    <string name="tituloWeb">Web de Pizzeria</string>
    <string name="volver">Volver</string>
    <string name="salir">Salir</string>
    <string name="labelConfiguracion">Configuración</string>
    <string name="fondo">Fondo</string>
    <string name="Activar_Favorita">Activar Favorita</string>
    <string name="pizzaFav">Pedir Pizza Favorita</string>
    <string name="personalizada">Pizza Personalizada</string>
    <string name="pizzaPred">Pizzas Predeterminadas</string>
    <string name="pequeña">Pequeña</string>
    <string name="mediana">Mediana</string>
    <string name="familiar">Familiar</string>
    <string name="pollo">Pollo</string>
    <string name="pimiento">Bacon</string>
    <string name="peperoni">Pepperoni</string>
    <string name="aceitunas">Aceitunas</string>
    <string name="atun">Atún</string>
    <string name="champi">Champiñones</string>
    <string name="pimientos">Pimientos</string>
    <string name="picada">Carne Picada</string>
    <string name="Siguiente">Seguir</string>
    <string name="confirm">Confirmar</string>
    <string name="btnCarbonara">Comprar</string>
    <string name="btnCarnivora">Comprar</string>
    <string name="paginaweb">Esta es la web de la pizzería.</string>
    <string name="Colorfondo">Color del Fondo</string>
    <string name="cebolla">Cebolla\n</string>
    <string name="Piña">Piña</string>
    <string name="York">Jamón York</string>
    <string name="Pimientos">Pimiento\n</string>
    <string name="Huevos">Huevo\n</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="WebTitulo">Ajuan\'s Pizza</string>
</resources>