<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    tools:context=".Pedidos">

    <Button
        android:id="@+id/pizzaFavorita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#FF0000"
        android:onClick="onClick"
        android:text="@string/pizzaFav"
        app:layout_constraintBottom_toTopOf="@+id/pizza_personalizada"
        app:layout_constraintStart_toStartOf="@+id/pizza_personalizada"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/pizza_personalizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#FF0000"
        android:onClick="onClick"
        android:text="@string/personalizada"
        app:layout_constraintBottom_toTopOf="@+id/pizzaPredeterminada"
        app:layout_constraintEnd_toEndOf="@+id/pizzaPredeterminada"
        app:layout_constraintTop_toBottomOf="@+id/pizzaFavorita" />

    <Button
        android:id="@+id/pizzaPredeterminada"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="297dp"
        android:backgroundTint="#FF0000"
        android:onClick="onClick"
        android:text="@string/pizzaPred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_personalizada" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="282dp"
        android:layout_height="77dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="61dp"
        android:text="PEDIDOS"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/pizzaFavorita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonVolver" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="162dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#FF0000"
        android:onClick="onClick"
        android:text="Volver"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>